# lockmate-password-manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/api/: v1.md
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  types.ts
src/: main.rs
src/api/rest/: admin.rs  healthcheck.rs  middleware.rs  mod.rs  router.rs  security.rs  shares.rs  tools.rs  vault_items.rs
src/application/commands/: create_user_command.rs  login_user_command.rs  logout_user_command.rs  mod.rs  register_user_command.rs
src/application/commands/mfa/: enroll_start.rs  enroll_verify.rs  login_verify.rs  mod.rs  responses.rs  revoke_device.rs  rotate_recovery_codes.rs
src/application/queries/: get_all_users_query.rs  mfa_status_query.rs  mod.rs
src/application/services/: audit.rs  auth.rs  mfa.rs  mod.rs  password.rs  security_health.rs  vault.rs
src/domain/models/: audit_entry.rs  mfa.rs  mod.rs  security_health.rs  share.rs  user.rs  vault_folder.rs  vault_item.rs
src/infrastructure/: mod.rs
src/infrastructure/data/: mod.rs
src/infrastructure/data/db_context/: mod.rs  schema.rs  surrealdb_context.rs
src/infrastructure/security/: crypto.rs  encryption.rs  k_anonymity.rs  mod.rs
src/infrastructure/telemetry/: mod.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppLayout.tsx
web/src/context/: AuthContext.tsx
web/src/hooks/: useVaultKey.ts
web/src/lib/: encryption.ts
web/src/pages/: LoginPage.tsx  RegisterPage.tsx  SecurityCenterPage.tsx  VaultDetailPage.tsx  VaultItemPage.tsx  VaultListPage.tsx
(+8 files in other folders)
