[package]
name = "lockmate-password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = "2.2.2"
argon2 = "0.5"
rand_core = "0.6"
dotenvy = "0.15"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
once_cell = "1.21.0"
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.26"
jsonwebtoken = "9"
