[package]
name = "lockmate-password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = "2.2.2"
argon2 = "0.5"
rand_core = "0.6"
rand = "0.8"
dotenvy = "0.15"
tracing-subscriber = "0.3.19"
tracing = "0.1"
chrono = "0.4.40"
once_cell = "1.21.0"
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.26"
jsonwebtoken = "9"
ring = "0.17"
data-encoding = "2.5"
base64 = "0.22"
qrcode = "0.7"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
urlencoding = "2.1"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
